testsuite/tests/properties/invalid_matchers/node_after_full_2/test.lkt
from common import BodyNode, Compound, Expression, FooNode, NullNode, Number

class ExampleNode: FooNode {
    @parse_field body: BodyNode

    fun prop(): Int = match node.body {
        case e: NullNode   => e.prop()
        case e: Number     => e.prop()
        case e: Compound   => e.prop()
        case e: BodyNode   => e.prop()
    }
}
